--- a/src/sass/modules/_settings.sass
+++ b/src/sass/modules/_settings.sass
@@ -16,7 +16,7 @@
     position: absolute
     top: 0
     right: 0
-    padding: 0.5em
+    padding: 0.8em 1em
     border: 0
     color: #444
     background: none
