--- a/src/sass/partials/_base.sass
+++ b/src/sass/partials/_base.sass
@@ -33,7 +33,6 @@ button
 .container
   font-size: 14px
   width: 30em
-  border: 2px solid #fff
   transform: translateZ(-1px)
   background-image: url('../../assets/background.png')
   // For preloading
